package model;

import java.io.Serializable;

public class Conversation implements Serializable {

}
